--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "ps-redux",
   "description": "React and Redux Pluralsight course by Cory House",
-  "scripts": {},
+  "scripts": {
+    "start": "webpack serve --config webpack.config.dev.js --port 3000"
+  },
   "dependencies": {
     "bootstrap": "5.0.2",
     "immer": "^9.0.15",
@@ -46,7 +48,7 @@
     "style-loader": "3.0.0",
     "webpack": "5.44.0",
     "webpack-bundle-analyzer": "4.4.2",
-    "webpack-cli": "4.9.0",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^3.11.3"
   },
   "engines": {
