--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"prop-types": "15.7.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-loader-spinner": "^5.1.5",
 		"react-redux": "7.2.4",
 		"react-router-dom": "5.2.0",
 		"react-toastify": "7.0.4",
