--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
 			"no-debugger": "off",
 			"no-console": "off",
 			"no-unused-vars": "warn",
-			"react/prop-types": "warn"
+			"react/prop-types": "warn",
+			"no-mixed-spaces-and-tabs": 0
 		},
 		"settings": {
 			"react": {
