tests(jest): add test environment configuration

--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-	"name": "ps-redux",
-	"description": "React and Redux Pluralsight course by Cory House",
+	"name": "PES Academy",
+	"description": "",
 	"scripts": {
 		"start": "run-p start:dev start:api",
 		"start:dev": "webpack serve --config webpack.config.dev.js --port 3000",
 		"prestart:api": "node tools/createMockDb.js",
-		"start:api": "node tools/apiServer.js"
+		"start:api": "node tools/apiServer.js",
+		"test": "jest --watch"
+	},
+	"jest": {
+		"testEnvironment": "jsdom",
+		"moduleNameMapper": {
+			"\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/fileMock.js",
+			"\\.(css|less)$": "<rootDir>/tools/styleMock.js"
+		}
 	},
 	"dependencies": {
 		"bootstrap": "5.0.2",
